--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <div class="city" id="city">Basavilbaso, ER</div>
     <div class="temperature">
         <img class="temp-img" id="temp-img" />
-            <div class="temp" id="temp">14c</div>
+        <div class="temp" id="temp">14c</div>
+        <img class="humidityImg" src="https://cdn-icons-png.freepik.com/256/6853/6853894.png?ga=GA1.1.586194358.1722728342&semt=ais_hybrid" id="humImg">
+        <div class="humidity" id= "hum">50% </div>
     </div>
     <div class = "infoWeather"> 
         <div class="weather" id="weather">Sol</div>    
