--- a/data/index.html
+++ b/data/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
@@ -16,15 +17,41 @@
     <div class="main-container">
         <div class="left">
             <h2>Alarma</h2>
-            <p>fecha <span id='fecha'></span></p>
-            <p>hora <span id='hora'></span></p>
-            <p>Alarma 
-                <input type="text" id="targetTime" placeholder="HH:MM..." class="handleSetTime"/>
-                <button onclick="setTargetTime()">Set</button>
-            </p>
-            <button onclick="stopAlarm()">Cancel</button>        
-        </div>
+            <p><span id='fecha'></span></p>
+            <p><span id='hora' class = "hora-size"></span></p>            
+            <button id="openPopupBtn">Alarma</button>
+            <div id="popup" class="popup">
+                <div class="popup-content">
+                    <span class="close-btn">&times;</span>  
+                    <input type="time" id="targetTime" placeholder="HH:MM..." class="handleSetTime"/>
 
+                    <button onclick="setTargetTime()">Set</button>   <!-- Seteamos la alarma-->
+                    <button id="durationBtn">Duracion</button> <!-- Seteamos cuanto dura la alarma-->
+                    <button id="repetitiveBtn">Repetitividad</button> <!-- Seteamos cuántas veces se repite la alarma-->
+
+                    <!--Menu desplegable para la duracion de la alarma-->
+                    <div id="durationAlarm" class="durationPopup" style="display: none;">
+                        <label for="durationTime">Duración: </label>
+                        <select id="durationTime" class="handleSetTime">
+                            <option value="0.5">30 segundos</option>
+                            <option value="1">1 minuto</option>
+                            <option value="1.5">1.5 minutos</option>
+                        </select>
+                    </div>
+                    <!--Menu desplegable para la repetividad-->
+                    <div id="repetitiveAlarm" class="repetitivePopup" style="display: none;">
+                    <label for="repeatCount">Repetir:</label>
+                    <select id="repeatCount" class="handleSetTime">
+                        <option value="1">1 vez</option>
+                        <option value="2">2 veces</option>
+                        <option value="3">3 veces</option>    
+                    </select>
+                    </div>
+                </div>
+            </div>
+            <button onclick="stopAlarm()">Cancel</button>
+        </div>
+        
         <div class="right">
             <h3>Clima</h3>
             <div class="search-form">
