Audio y alarma funcionando

--- a/data/index.html
+++ b/data/index.html
@@ -42,6 +42,7 @@
                     <div id="repetitiveAlarm" class="repetitivePopup" style="display: none;">
                     <label for="repeatCount">Repetir:</label>
                     <select id="repeatCount" class="handleSetTime">
+                        <option value=" ">No repetir</option>
                         <option value="1">1 vez</option>
                         <option value="2">2 veces</option>
                         <option value="3">3 veces</option>    
@@ -96,7 +97,7 @@
             </div>
         </div>
     </div>
-    <audio id="alarmAudio" scr="/ringtone.mp3" preload="auto"></audio>
+    <audio id="alarmAudio" src="/ringtone.mp3" preload="auto"></audio>
 </body>
 
     
