--- a/data/index.html
+++ b/data/index.html
@@ -32,20 +32,18 @@
                     <span class="close-btn"></span>  
                     <input type="time" id="targetTime" placeholder="HH:MM..." class="handleSetTime"/>
 
-                    <button class = "set" onclick="setConfigAlarm()">Set</button>   <!-- Seteamos la alarma-->
-                    <!-- <button id="durationBtn">Duracion</button> Seteamos cuanto dura la alarma -->
-                    <!--                     
-
+                    <button class = "set" onclick="setConfigAlarm()">Set</button>  
+                    <button id="durationBtn">Duracion</button> 
                     <div id="durationAlarm" class="durationPopup" style="display: none;">
                         <label for="durationTime">Duración: </label>
                         <select id="durationTime" class="handleSetTime">
-                            <option value="0.5">30 segundos</option>
-                            <option value="1">1 minuto</option>
-                            <option value="1.5">1.5 minutos</option>
+                            <option value="5">5 minutos</option>
+                            <option value="10">10 minutos</option>
+                            <option value="20">20 minutos</option>
+                            <option value="30">30 minutos</option>
                         </select>
-                    </div> -->
+                    </div> 
                     
-                
             </div>
             </div>
         <h3>Clima</h3>
